apps/wiki-cedille/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-cedille-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - secretName: wiki-tls
      hosts:
        - wiki.cedille.club
  rules:
    - host: wiki.cedille.club
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wiki-cedille
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-cedille-ingress-stg
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - secretName: wiki-stg-tls
      hosts:
        - wiki.prodv2.cedille.club
  rules:
    - host: wiki.prodv2.cedille.club
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wiki-cedille-stg
                port:
                  name: http
